methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:30: error: type mismatch;
 found   : Unit
 required: Boolean
    colonne()
           ^